[package]
name = "covid19"
version = "0.1.0"
authors = ["Paa Kojo Samanpa <samanpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv="*"
reqwest = { version = "0.10", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
structopt = "*"
