[package]
name = "covid19"
version = "0.1.1"
authors = ["Paa Kojo Samanpa <samanpa@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "*"
csv="*"
num-format = "*"
reqwest = { version = "0.10", features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
structopt = "*"
tabwriter = "*"
